# UtilServices

./: .gitignore
auth-service/: .env  Cargo.toml  auth-service.dockerfile
auth-service/proto/: auth.proto
auth-service/src/: main.rs  schema.rs
auth-service/src/database/: db.rs
auth-service/src/grpc/: mod.rs  server.rs
auth-service/src/models/: app.rs  logger.rs  mod.rs
auth-service/src/repositories/: app.rs
auth-service/src/services/: auth.rs  mod.rs
logger-service/: .env  Cargo.toml  build.rs  logger-service.dockerfile
logger-service/proto/: logger.proto
logger-service/src/: main.rs
logger-service/src/file_logger/: logger.rs  mod.rs
logger-service/src/grpc/: server.rs
logger-service/src/services/: logger.rs  mod.rs
logger-service/src/telegram/: mod.rs  telegram.rs
project/: Makefile  docker-compose.yml  swarm.yml
uts/: go.mod  (+1 more)
uts-broker/: .dockerignore  Cargo.toml  broker-service.dockerfile  build.rs
uts-broker/proto/: auth.proto
uts-broker/src/: main.rs
uts-broker/src/errors/: errors.rs  mod.rs
uts-broker/src/handlers/: broker.rs  mod.rs
uts-broker/src/middleware/: auth.rs  mod.rs
uts-broker/src/models/: app.rs  handler_request.rs  handler_response.rs  mod.rs
uts-broker/src/services/: auth.rs  broker.rs  mod.rs
uts-broker/uts-cli/: Cargo.toml
uts-broker/uts-cli/migrations/2022-05-31-051115_enabled_loggers/: down.sql  up.sql
uts-broker/uts-cli/src/: main.rs
uts-broker/uts-cli/src/controllers/: app.rs
uts-broker/uts-cli/src/models/: app.rs  error.rs  mod.rs
uts-broker/uts-cli/src/repositories/: app.rs
(+2 files in other folders)
