[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.7"