[package]
name = "logger-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
chrono = "0.4.19"
flexi_logger = "0.22"
log = "0.4"
url = "2.2"

[build-dependencies]
tonic-build = "0.7"