[package]
name = "uts-broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
actix-service = "2"
futures-util = "0.3.21"
derive_more = "0.99.17"
tonic = "0.7"
prost = "0.10"


[build-dependencies]
tonic-build = "0.7"